# RabbitShot

./: .gitignore  CMakeLists.txt  globalhotkey.cpp  globalhotkey.h  intelligent_stitching_system.md  main.cpp  mainwindow.cpp  mainwindow.h  screenshotcapture.cpp  screenshotcapture.h  screenshotpreview.cpp  screenshotpreview.h  seamless_stitching_guide.md  selectionoverlay.cpp  selectionoverlay.h  test_fixes.md
